@@ -66,7 +66,7 @@ public class EncodingsOptionPane extends AbstractOptionPane
 	private JCheckBox encodingAutodetect;
 	private JTextField encodingDetectors;
 	private JTextField fallbackEncodings;
-
+	private JComboBox lineSeparator;
 	private JButton selectAllButton;
 	private JButton selectNoneButton;
 	private PingPongList<String> pingPongList;
@@ -82,6 +82,24 @@ public class EncodingsOptionPane extends AbstractOptionPane
 	@Override
 	protected void _init()
 	{
+		
+		/* Line separator */
+		String[] lineSeps = { jEdit.getProperty("lineSep.unix"),
+			jEdit.getProperty("lineSep.windows"),
+			jEdit.getProperty("lineSep.mac") };
+		lineSeparator = new JComboBox(lineSeps);
+		String lineSep = jEdit.getProperty("buffer."+ JEditBuffer.LINESEP,
+			System.getProperty("line.separator"));
+		if("\n".equals(lineSep))
+			lineSeparator.setSelectedIndex(0);
+		else if("\r\n".equals(lineSep))
+			lineSeparator.setSelectedIndex(1);
+		else if("\r".equals(lineSep))
+			lineSeparator.setSelectedIndex(2);
+		addComponent(jEdit.getProperty("options.general.lineSeparator"),
+			lineSeparator);
+
+		
 		// Default file encoding
 		String[] encodings = getEncodings(true);
 		sort(encodings,new StandardUtilities.StringCompare<String>(true));
@@ -154,6 +172,21 @@ public class EncodingsOptionPane extends AbstractOptionPane
 	@Override
 	protected void _save()
 	{
+		String lineSep = null;
+		switch(lineSeparator.getSelectedIndex())
+		{
+		case 0:
+			lineSep = "\n";
+			break;
+		case 1:
+			lineSep = "\r\n";
+			break;
+		case 2:
+			lineSep = "\r";
+			break;
+		}
+		jEdit.setProperty("buffer."+ JEditBuffer.LINESEP,lineSep);
+		
 		jEdit.setProperty("buffer."+ JEditBuffer.ENCODING,(String)
 			defaultEncoding.getSelectedItem());
 		jEdit.setBooleanProperty("buffer.encodingAutodetect",
